--- a/tailwind.css
+++ b/tailwind.css
@@ -551,6 +551,10 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+.mb-16 {
+  margin-bottom: 4rem;
+}
+
 .mt-8 {
   margin-top: 2rem;
 }
@@ -559,16 +563,8 @@ video {
   margin-top: 1rem;
 }
 
-.mb-8 {
-  margin-bottom: 2rem;
-}
-
 .flex {
   display: flex;
-}
-
-.h-20 {
-  height: 5rem;
 }
 
 .h-16 {
@@ -579,16 +575,16 @@ video {
   height: 15rem;
 }
 
+.h-24 {
+  height: 6rem;
+}
+
 .min-h-screen {
   min-height: 100vh;
 }
 
 .w-full {
   width: 100%;
-}
-
-.w-5\/6 {
-  width: 83.333333%;
 }
 
 .resize-y {
@@ -611,9 +607,22 @@ video {
   border-radius: 0.25rem;
 }
 
-.bg-gray-400 {
+.border {
+  border-width: 1px;
+}
+
+.border-t {
+  border-top-width: 1px;
+}
+
+.border-zinc-300 {
+  --tw-border-opacity: 1;
+  border-color: rgb(212 212 216 / var(--tw-border-opacity));
+}
+
+.bg-zinc-200 {
   --tw-bg-opacity: 1;
-  background-color: rgb(156 163 175 / var(--tw-bg-opacity));
+  background-color: rgb(228 228 231 / var(--tw-bg-opacity));
 }
 
 .bg-orange-300 {
@@ -621,30 +630,29 @@ video {
   background-color: rgb(253 186 116 / var(--tw-bg-opacity));
 }
 
-.bg-stone-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(120 113 108 / var(--tw-bg-opacity));
-}
-
 .bg-slate-900 {
   --tw-bg-opacity: 1;
   background-color: rgb(15 23 42 / var(--tw-bg-opacity));
 }
 
-.pt-8 {
-  padding-top: 2rem;
+.p-4 {
+  padding: 1rem;
 }
 
-.pb-8 {
-  padding-bottom: 2rem;
+.pt-16 {
+  padding-top: 4rem;
 }
 
-.pl-4 {
-  padding-left: 1rem;
+.pb-16 {
+  padding-bottom: 4rem;
 }
 
 .text-center {
   text-align: center;
+}
+
+.font-jost {
+  font-family: Jost, sans-serif;
 }
 
 .font-silk {
@@ -661,12 +669,27 @@ video {
   line-height: 2.25rem;
 }
 
-.text-xl {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
+.text-slate-50 {
+  --tw-text-opacity: 1;
+  color: rgb(248 250 252 / var(--tw-text-opacity));
 }
 
 .text-slate-100 {
   --tw-text-opacity: 1;
   color: rgb(241 245 249 / var(--tw-text-opacity));
+}
+
+.text-zinc-400 {
+  --tw-text-opacity: 1;
+  color: rgb(161 161 170 / var(--tw-text-opacity));
 }
