--- a/tailwind.css
+++ b/tailwind.css
@@ -744,6 +744,10 @@ video {
   font-family: Jost, sans-serif;
 }
 
+.font-silk {
+  font-family: Silkscreen, cursive;
+}
+
 .font-ptsans {
   font-family: PT Sans, sans-serif;
 }
